# medallion-architecture

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: pipeline_config.yml
dags/: dag_bronze_ingest.py  dag_gold_build.py  dag_silver_transform.py
dags/operators/: tlc_ingest_operator.py
dags/sensors/: minio_key_sensor.py
dbt/nyc_taxi/: dbt_project.yml  profiles.yml
dbt/nyc_taxi/macros/: time_bucket.sql
dbt/nyc_taxi/models/: schema.yml  sources.yml
dbt/nyc_taxi/models/marts/: dim_taxi_zones.sql  fct_daily_borough_demand.sql  fct_hourly_zone_revenue.sql  mart_payment_analysis.sql
dbt/nyc_taxi/models/staging/: stg_taxi_zones.sql  stg_yellow_taxi.sql
dbt/nyc_taxi/tests/: assert_revenue_positive.sql  assert_trip_duration_valid.sql
docker/airflow/: Dockerfile  requirements.txt
docker/spark/: Dockerfile  requirements.txt
docker/superset/: Dockerfile  superset_config.py
docs/: data_dictionary.md  runbook.md
docs/decisions/: ADR-001-delta-lake-vs-iceberg.md  ADR-002-dbt-for-gold-layer.md  ADR-003-spark-standalone-vs-k8s.md
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: bronze_checkpoint.yml  gold_checkpoint.yml  silver_checkpoint.yml
great_expectations/expectations/: bronze_yellow_taxi_suite.json  gold_revenue_suite.json  silver_yellow_taxi_suite.json
monitoring/grafana/dashboards/: pipeline_overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/: init_minio.sh  init_superset.sh  run_backfill.sh  seed_data.sh
spark_jobs/bronze_to_silver/: schema_definitions.py  yellow_taxi_transformer.py
spark_jobs/utils/: delta_utils.py  metrics.py  minio_client.py
tests/: conftest.py
tests/integration/: test_bronze_to_silver_pipeline.py
tests/unit/: test_delta_utils.py  test_tlc_ingest_operator.py  test_yellow_taxi_transformer.py
