[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medallion-architecture"
version = "0.1.0"
description = "Production-grade Medallion Architecture ETL pipeline - NYC Taxi Analytics"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["spark_jobs*", "dags*"]

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: fast unit tests with no I/O",
    "integration: tests requiring running services (Spark, MinIO)",
    "slow: tests that take more than 30 seconds",
]

# ─── ruff (linter) ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["spark_jobs", "dags", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in default args
]

[tool.ruff.lint.isort]
known-first-party = ["spark_jobs", "dags"]

# ─── black (formatter) ────────────────────────────────────────────────────────
[tool.black]
target-version = ["py312"]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# ─── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["spark_jobs"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 50
